--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,4 +1,6 @@
 h1 a {
     color: #9390D4;
 }
-<a href="http://en.wikipedia.org/wiki/Django" class="external_link" id="link_to_wiki_page">
+body {
+    padding-left: 15px;
+}
