Modified templates to display posts from database.

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -8,6 +8,7 @@
     <body>
         <div class="page-header">
             <h1><a href="">Nicole's trip to Europe</a></h1>
+            <img src="https://scontent.xx.fbcdn.net/hphotos-xft1/v/t1.0-9/12196105_10153127076535759_7095481913500121692_n.jpg?oh=4e0bbb1b6475b5643a831edab539b631&oe=56B1A7AA">
         </div>
         <div class="content container">
       <div class="row">
